--- a/test/AccessibleBlazor.Tests.csproj
+++ b/test/AccessibleBlazor.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
@@ -31,7 +31,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AccessibleBlazor\AccessibleBlazor.csproj" />
+		<ProjectReference Include="..\src\AccessibleBlazor.csproj" />
 	</ItemGroup>
 
 </Project>
